[package]
name = "goodreads-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"]}
scraper = { version = "0.19", features = ["atomic"]}
tokio-test = "0.4"
tokio = { version = "1", features = ["full"]}
itertools = "0.13.0"
regex = "1.10.5"
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
